# red

./: .env-example  .gitignore  README.md  pyproject.toml
notebooks/: gemini_call.ipynb  jinja_example.ipynb  lambda_call.ipynb  ollama_call.ipynb  openai_call.ipynb
redtransformer/: database.py  file_utils.py  models.py  tools.py
redtransformer/code_execution/: main.py  test.py
redtransformer/rag/: rag_example.ipynb
redtransformer/rag/chroma_db/: chroma.sqlite3
redtransformer/templates/: generate_code.jinja  typst_rag.jinja
