[tool.poetry]
name = "red-transformer"
version = "0.1.0"
description = ""
authors = ["Sckathach <thomas.winninger68@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.54.1"
transformers = "^4.46.2"
torch = "^2.5.1"
langchain = "^0.3.7"
langchain-google-genai = "^2.0.4"
langchain-ollama = "^0.2.0"
llama-cpp-python = "^0.3.1"
pydantic = "^2.9.2"
pypdf = "^5.1.0"
pymupdf4llm = "^0.0.17"
pdfplumber = "^0.11.4"
langchain-community = "^0.3.5"
pypdf2 = "^3.0.1"
faiss-cpu = "^1.9.0"
rich = "^13.9.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
